--- a/templates/app/upload.html
+++ b/templates/app/upload.html
@@ -28,7 +28,7 @@
           </form>
           <div class="mt-4 text-center">
             <a href="{% url 'video_list' %}" class="btn btn-secondary"
-              >Video List</a
+              >Videos</a
             >
           </div>
         </div>
