--- a/templates/app/detail.html
+++ b/templates/app/detail.html
@@ -8,25 +8,83 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.11.8/video-js.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        background-color: #f5f5f5;
+      }
+
+      .container {
+        max-width: 800px;
+        margin: auto;
+        padding: 20px;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      }
+
+      h1 {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      .video-wrapper {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+      }
+
+      .btn-back {
+        display: block;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      video {
+        border-radius: 10px;
+        max-width: 100%;
+        height: auto;
+      }
+    </style>
   </head>
   <body>
     <div class="container mt-5">
       <!-- Back Button -->
-      <div class="mb-3">
+      <div class="btn-back">
         <a href="{% url 'video_list' %}" class="btn btn-primary">Back</a>
       </div>
-      <h1 class="text-center">{{ video.title }}</h1>
-      <video controls>
-        <source src="{{ video.video_file.url }}" type="video/mp4" />
-        {% for subtitle in subtitles %}
-        <track
-          label="{{ subtitle.language }}"
-          kind="subtitles"
-          srclang="{{ subtitle.language }}"
-          src="data:text/vtt,{{ subtitle.subtitle_file }}"
-        />
-        {% endfor %}
-      </video>
+
+      <h1>{{ video.title }}</h1>
+
+      <div class="video-wrapper">
+        <video
+          id="video-player"
+          class="video-js vjs-default-skin"
+          controls
+          preload="auto"
+          width="640"
+          height="360"
+          data-setup="{}"
+        >
+          <source src="{{ video.video_file.url }}" type="video/mp4" />
+          {% for subtitle in subtitles %}
+          <track
+            label="{{ subtitle.language }}"
+            kind="subtitles"
+            srclang="{{ subtitle.language }}"
+            src="data:text/vtt,{{ subtitle.subtitle_file }}"
+            default="{% if forloop.first %}true{% endif %}"
+          />
+          {% endfor %}
+        </video>
+      </div>
     </div>
+
+    <!-- Include Video.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.11.8/video.min.js"></script>
   </body>
 </html>
